syntax = "proto3";

option csharp_namespace = "API_DemoGRPC";

package chat;

message ChatMessage{
	string user = 1;
	string message = 2;
}

service ChatService{
	rpc ChatStream (stream ChatMessage) returns (stream ChatMessage);
}